# dgp-hk

./: .clang-format  .gitmodules
projects/hk1/src/: algorithm.cpp  main.cpp
projects/hk1_shortest_path/: CMakeLists.txt
projects/hk1_shortest_path/include/: algorithm.h
projects/hk2/src/: main.cpp
projects/hk2_curvature/: CMakeLists.txt
projects/hk2_curvature/src/: main.cpp
projects/hk3_mesh_smoothing/src/: main.cpp
projects/hk4_mesh_parameterization/: CMakeLists.txt
projects/hk4_mesh_parameterization/src/: main.cpp
projects/template/src/: main.cpp
